# dxf-pipeline

./: .gitattributes  .gitignore  EXTRACT_HITBOXES_EXPLAINER.md  README.md  pyproject.toml
conda/: environment.yml
diagrams/: diagram1.dxf  labels.txt  mock_viewer_themes.json
pipeline/: extract_hitboxes.py  pipeline_types.py  rasterise_tiles.py  render_svg.py  run_pipeline.py
tests/: conftest.py  test_extract_hitboxes.py  test_rasterise_tiles.py  test_render_svg.py  test_run_pipeline.py
